# simple-banking

./: .gitignore  README.MD  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: python-app.yml
src/banking/: account.py  alchemy_base.py  banking_main.py  database_manager.py  input_utils.py  user_session.py
src/simple_banking.egg-info/: PKG-INFO  SOURCES.txt
test/: test_account.py  test_banking_main.py  test_database_manager.py
