[metadata]
name = simple-banking
version = 3.11.3
packages = []
url =
license =
author = jwisskirchen
author_email =
description = Jetbrains academy Python project using a SQLite database.

[options]
packages = find:
package_dir =
    =src
include_package_data = True

[options.packages.find]
where = src